welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
gauche();
marquer();
avance();avance();avance();avance();//fin barre supérieur
gauche();
avance();avance();avance();avance();//fin barre gauche
gauche();
avance();avance();avance();avance();//fin barre inférieur
gauche();
avance();avance();
gauche(); avance();//fin G
marquer();
recule();droite();avance();avance();//position finale